fixed styling on mobile

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -169,6 +169,7 @@ button {
 
 input {
     @apply placeholder-slate-400 ring-0 focus:ring-0;
+    opacity: 1
 }
 
 .border-1 {
